output/ecs-fargate-run-task/aws-sfn-tasks-ecs-fargate-integ.template.json
{
  "Resources": {
    "FargateCluster7CCD5F93": {
      "Type": "AWS::ECS::Cluster"
    },
    "FargateClusterVpc377E8024": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet1SubnetB9C24BC7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet1RouteTable1D7FA747": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet1RouteTableAssociation80F1442F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPublicSubnet1RouteTable1D7FA747"
        },
        "SubnetId": {
          "Ref": "FargateClusterVpcPublicSubnet1SubnetB9C24BC7"
        }
      }
    },
    "FargateClusterVpcPublicSubnet1DefaultRoute80086690": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPublicSubnet1RouteTable1D7FA747"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "FargateClusterVpcIGW827638CB"
        }
      },
      "DependsOn": [
        "FargateClusterVpcVPCGW38717255"
      ]
    },
    "FargateClusterVpcPublicSubnet1EIPF91909D0": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet1NATGateway5202D86A": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "FargateClusterVpcPublicSubnet1SubnetB9C24BC7"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "FargateClusterVpcPublicSubnet1EIPF91909D0",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "FargateClusterVpcPublicSubnet1DefaultRoute80086690",
        "FargateClusterVpcPublicSubnet1RouteTableAssociation80F1442F"
      ]
    },
    "FargateClusterVpcPublicSubnet2Subnet24C0F9D8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet2RouteTable1493C5D6": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet2RouteTableAssociation3EFA74DC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPublicSubnet2RouteTable1493C5D6"
        },
        "SubnetId": {
          "Ref": "FargateClusterVpcPublicSubnet2Subnet24C0F9D8"
        }
      }
    },
    "FargateClusterVpcPublicSubnet2DefaultRoute8E847CD2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPublicSubnet2RouteTable1493C5D6"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "FargateClusterVpcIGW827638CB"
        }
      },
      "DependsOn": [
        "FargateClusterVpcVPCGW38717255"
      ]
    },
    "FargateClusterVpcPublicSubnet2EIPBBB24774": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterVpcPublicSubnet2NATGatewayFFEC8ED2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "FargateClusterVpcPublicSubnet2Subnet24C0F9D8"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "FargateClusterVpcPublicSubnet2EIPBBB24774",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PublicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "FargateClusterVpcPublicSubnet2DefaultRoute8E847CD2",
        "FargateClusterVpcPublicSubnet2RouteTableAssociation3EFA74DC"
      ]
    },
    "FargateClusterVpcPrivateSubnet1Subnet9127625F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "FargateClusterVpcPrivateSubnet1RouteTable21B3CEAE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "FargateClusterVpcPrivateSubnet1RouteTableAssociation78F6E213": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPrivateSubnet1RouteTable21B3CEAE"
        },
        "SubnetId": {
          "Ref": "FargateClusterVpcPrivateSubnet1Subnet9127625F"
        }
      }
    },
    "FargateClusterVpcPrivateSubnet1DefaultRoute0438DCBA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPrivateSubnet1RouteTable21B3CEAE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "FargateClusterVpcPublicSubnet1NATGateway5202D86A"
        }
      }
    },
    "FargateClusterVpcPrivateSubnet2Subnet307CEE57": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "FargateClusterVpcPrivateSubnet2RouteTable7B7F9678": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "FargateClusterVpcPrivateSubnet2RouteTableAssociation3A46964C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPrivateSubnet2RouteTable7B7F9678"
        },
        "SubnetId": {
          "Ref": "FargateClusterVpcPrivateSubnet2Subnet307CEE57"
        }
      }
    },
    "FargateClusterVpcPrivateSubnet2DefaultRoute35FDD29D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterVpcPrivateSubnet2RouteTable7B7F9678"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "FargateClusterVpcPublicSubnet2NATGatewayFFEC8ED2"
        }
      }
    },
    "FargateClusterVpcIGW827638CB": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-sfn-tasks-ecs-fargate-integ/FargateCluster/Vpc"
          }
        ]
      }
    },
    "FargateClusterVpcVPCGW38717255": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        },
        "InternetGatewayId": {
          "Ref": "FargateClusterVpcIGW827638CB"
        }
      }
    },
    "TaskDefTaskRole1EDB4A67": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "TaskDef54694570": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": {
              "Fn::Sub": "${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:7a4895bc694ae074467753dddb9a798e58f2f5eda62bcce5833d7d356b8a1da2"
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "TaskDefTheContainerLogGroupD94C8EF5"
                },
                "awslogs-stream-prefix": "EventDemo",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Memory": 256,
            "Name": "TheContainer"
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "TaskDefExecutionRoleB4775C97",
            "Arn"
          ]
        },
        "Family": "awssfntasksecsfargateintegTaskDefD0F4AD10",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "TaskDefTaskRole1EDB4A67",
            "Arn"
          ]
        }
      }
    },
    "TaskDefTheContainerLogGroupD94C8EF5": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "TaskDefExecutionRoleB4775C97": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "TaskDefExecutionRoleDefaultPolicy0DBB737A": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:BatchGetImage",
                "ecr:GetDownloadUrlForLayer"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":repository/",
                    {
                      "Fn::Sub": "cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}"
                    }
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "TaskDefTheContainerLogGroupD94C8EF5",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "TaskDefExecutionRoleDefaultPolicy0DBB737A",
        "Roles": [
          {
            "Ref": "TaskDefExecutionRoleB4775C97"
          }
        ]
      }
    },
    "FargateTaskSecurityGroup0BBB27CB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-sfn-tasks-ecs-fargate-integ/FargateTask/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        }
      }
    },
    "FargeateTaskSetRevisionNumberSecurityGroup916C9B0B": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-sfn-tasks-ecs-fargate-integ/FargeateTaskSetRevisionNumber/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        }
      }
    },
    "FargeateTaskWithPropagatedTagSecurityGroup94A6AE70": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-sfn-tasks-ecs-fargate-integ/FargeateTaskWithPropagatedTag/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "FargateClusterVpc377E8024"
        }
      }
    },
    "StateMachineRoleB840431D": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "StateMachineRoleDefaultPolicyDF1E6607": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecs:RunTask",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "TaskDef54694570"
                            }
                          ]
                        }
                      ]
                    },
                    ":",
                    {
                      "Fn::Select": [
                        2,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "TaskDef54694570"
                            }
                          ]
                        }
                      ]
                    },
                    ":",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "TaskDef54694570"
                            }
                          ]
                        }
                      ]
                    },
                    ":",
                    {
                      "Fn::Select": [
                        4,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "TaskDef54694570"
                            }
                          ]
                        }
                      ]
                    },
                    ":",
                    {
                      "Fn::Select": [
                        0,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Ref": "TaskDef54694570"
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    "/",
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Ref": "TaskDef54694570"
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    }
                  ]
                ]
              }
            },
            {
              "Action": [
                "ecs:DescribeTasks",
                "ecs:StopTask"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": "iam:PassRole",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "TaskDefExecutionRoleB4775C97",
                    "Arn"
                  ]
                },
                {
                  "Fn::GetAtt": [
                    "TaskDefTaskRole1EDB4A67",
                    "Arn"
                  ]
                }
              ]
            },
            {
              "Action": [
                "events:DescribeRule",
                "events:PutRule",
                "events:PutTargets"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":events:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":rule/StepFunctionsGetEventsForECSTaskRule"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "StateMachineRoleDefaultPolicyDF1E6607",
        "Roles": [
          {
            "Ref": "StateMachineRoleB840431D"
          }
        ]
      }
    },
    "StateMachine2E01A3A5": {
      "Type": "AWS::StepFunctions::StateMachine",
      "Properties": {
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn"
          ]
        },
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{\"StartAt\":\"Start\",\"States\":{\"Start\":{\"Type\":\"Pass\",\"Result\":{\"SomeKey\":\"SomeValue\",\"Timeout\":900},\"Next\":\"FargateTask\"},\"FargateTask\":{\"Next\":\"FargeateTaskSetRevisionNumber\",\"Type\":\"Task\",\"TimeoutSecondsPath\":\"$.Timeout\",\"Resource\":\"arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":states:::ecs:runTask.sync\",\"Parameters\":{\"Cluster\":\"",
              {
                "Fn::GetAtt": [
                  "FargateCluster7CCD5F93",
                  "Arn"
                ]
              },
              "\",\"TaskDefinition\":\"awssfntasksecsfargateintegTaskDefD0F4AD10\",\"NetworkConfiguration\":{\"AwsvpcConfiguration\":{\"AssignPublicIp\":\"ENABLED\",\"Subnets\":[\"",
              {
                "Ref": "FargateClusterVpcPublicSubnet1SubnetB9C24BC7"
              },
              "\",\"",
              {
                "Ref": "FargateClusterVpcPublicSubnet2Subnet24C0F9D8"
              },
              "\"],\"SecurityGroups\":[\"",
              {
                "Fn::GetAtt": [
                  "FargateTaskSecurityGroup0BBB27CB",
                  "GroupId"
                ]
              },
              "\"]}},\"Overrides\":{\"ContainerOverrides\":[{\"Name\":\"TheContainer\",\"Environment\":[{\"Name\":\"SOME_KEY\",\"Value.$\":\"$.SomeKey\"}]}]},\"LaunchType\":\"FARGATE\",\"PlatformVersion\":\"1.4.0\"}},\"FargeateTaskSetRevisionNumber\":{\"Next\":\"FargeateTaskWithPropagatedTag\",\"Type\":\"Task\",\"Resource\":\"arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":states:::ecs:runTask\",\"Parameters\":{\"Cluster\":\"",
              {
                "Fn::GetAtt": [
                  "FargateCluster7CCD5F93",
                  "Arn"
                ]
              },
              "\",\"TaskDefinition\":\"awssfntasksecsfargateintegTaskDefD0F4AD10:1\",\"NetworkConfiguration\":{\"AwsvpcConfiguration\":{\"Subnets\":[\"",
              {
                "Ref": "FargateClusterVpcPrivateSubnet1Subnet9127625F"
              },
              "\",\"",
              {
                "Ref": "FargateClusterVpcPrivateSubnet2Subnet307CEE57"
              },
              "\"],\"SecurityGroups\":[\"",
              {
                "Fn::GetAtt": [
                  "FargeateTaskSetRevisionNumberSecurityGroup916C9B0B",
                  "GroupId"
                ]
              },
              "\"]}},\"LaunchType\":\"FARGATE\",\"PlatformVersion\":\"1.4.0\"}},\"FargeateTaskWithPropagatedTag\":{\"End\":true,\"Type\":\"Task\",\"Resource\":\"arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":states:::ecs:runTask\",\"Parameters\":{\"Cluster\":\"",
              {
                "Fn::GetAtt": [
                  "FargateCluster7CCD5F93",
                  "Arn"
                ]
              },
              "\",\"TaskDefinition\":\"awssfntasksecsfargateintegTaskDefD0F4AD10\",\"NetworkConfiguration\":{\"AwsvpcConfiguration\":{\"Subnets\":[\"",
              {
                "Ref": "FargateClusterVpcPrivateSubnet1Subnet9127625F"
              },
              "\",\"",
              {
                "Ref": "FargateClusterVpcPrivateSubnet2Subnet307CEE57"
              },
              "\"],\"SecurityGroups\":[\"",
              {
                "Fn::GetAtt": [
                  "FargeateTaskWithPropagatedTagSecurityGroup94A6AE70",
                  "GroupId"
                ]
              },
              "\"]}},\"PropagateTags\":\"TASK_DEFINITION\",\"LaunchType\":\"FARGATE\",\"PlatformVersion\":\"1.4.0\"}}}}"
            ]
          ]
        }
      },
      "DependsOn": [
        "StateMachineRoleDefaultPolicyDF1E6607",
        "StateMachineRoleB840431D"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  },
  "Outputs": {
    "stateMachineArn": {
      "Value": {
        "Ref": "StateMachine2E01A3A5"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
